controlplane-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: master-pod
spec:
  containers:
  - name: master
    image: httpd:2.4.41-alpine
  nodeName: master-node
