logger-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: counter
spec:
  containers:
  - name: nginx
    image: nginx
  - name: count-log-1
    image: busybox:1.28
    args: [/bin/sh, -c, 'tail -n+1 -F /var/log/1.log']
    volumeMounts:
    - name: logdata
      mountPath: /var/log
  volumes:
  - name: logdata
    emptyDir: {}
